Update subtitle to Website Development | Content Management | Social Media Management

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joylene Pinto - Product | Marketing | Web Solutions</title>
+    <title>Joylene Pinto - Website Development | Content Management | Social Media Management</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -33,7 +33,7 @@
     <section id="hero" class="hero">
         <div class="hero-content">
             <h1 class="hero-title">Joylene Pinto</h1>
-            <p class="hero-subtitle">Product | Marketing | Web Solutions</p>
+            <p class="hero-subtitle">Website Development | Content Management | Social Media Management</p>
             <p class="hero-description">Building user-centric solutions that drive growth and deliver measurable performance through strategic thinking and data-driven execution.</p>
             <div class="hero-cta">
                 <button class="btn btn-primary" onclick="scrollToSection('projects')">
