Update About Me section with focused website development and digital services content

--- a/index.html
+++ b/index.html
@@ -403,10 +403,13 @@
                 <div class="about-text">
                     <h2 class="section-title">About Me</h2>
                     <p class="about-description">
-                        I'm an aspiring Product Manager and Digital Marketer with hands-on experience in building user-centric solutions that drive measurable growth. My approach combines strategic thinking with tactical execution, focusing on data-driven decisions and performance optimization.
+                        I am a student & website-focused digital professional with hands-on experience in website development, content management, and social media management. I specialize in building clean, user-centric websites and digital platforms that focus on clarity, performance, and measurable results.
                     </p>
                     <p class="about-description">
-                        Currently a 3rd-year Software Development student and President of the Dot Com Club, leading 350+ students and managing partnerships with 40+ colleges nationally. I've helped multiple clients achieve significant growth through strategic planning, conversion optimization, and performance marketing.
+                        I have worked across industries including education, immigration, real estate, and lifestyle brands, contributing to website structure, content optimization, SEO fundamentals, and digital engagement. I approach every project with strong ownership, attention to detail, and a focus on delivering solutions that align with both user needs and business goals.
+                    </p>
+                    <p class="about-description">
+                        Currently open to website development projects, content management work, social media assets, and end-to-end digital projects, collaborating with individuals, startups, and organizations to build impactful digital experiences.
                     </p>
                     
                     <div class="achievements">
